--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,3 +1,11 @@
 body {
   margin: 0;
+  font-family: 'Roboto';
+  background-color: #e0e0e0;
+}
+
+.grid-auth {
+  background-color: #fff;
+  padding: 20px 5px;
+  border-bottom: 5px solid #aeaeae;
 }
